# terraform-training

./: .env.example  .gitignore  .tool-versions  LICENSE  README.md
.cursor/: mcp.json
.cursor/rules/: terraform.mdc
.github/: pull_request_template.md
.github/actions/build-lambda/: action.yml
.github/actions/get-terraform-secrets/: action.yml
.github/actions/setup-python-build/: action.yml
.github/actions/setup-terraform/: action.yml
.github/actions/terraform-apply/: action.yml
.github/actions/terraform-plan/: action.yml
.github/workflows/: apply.yml  ci.yml  terraform-apply.yml  terraform-plan.yml  terraform-validate.yml
docs/: git-conventions.md
learning/advanced/module-01-handling-input-variables-locals-and-outputs/: notes.md
learning/advanced/module-02-using-expressions-and-functions/: notes.md
learning/advanced/module-03-managing-multiple-resources/: notes.md
learning/advanced/module-04-project-managing-iam-users/: notes.md
learning/advanced/module-05-working-with-modules/: notes.md
learning/advanced/module-06-validating-objects/: notes.md
learning/advanced/module-07-managing-state-in-terraform/: notes.md
learning/basics/: notes.md
practice/: .gitignore  README.md
practice/10_core/: locals.tf  outputs.tf
practice/20_infra/: main.tf
practice/30_app/: variables.tf
practice/deploy/: README.md
practice/envs/prod/: main.tf  (+2 more)
practice/scripts/: README-testing.md  test-terraform-apply-workflow.sh  test-workflow-with-act.sh  trigger-workflow.sh
practice/src/lambda/api_server/: api_server.py  init.py  pyproject.toml
(+266 files in other folders)
